--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "engines": {
         "vscode": "^1.16.0"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/vasetech/dev-extension-pack.git"
+    },
     "categories": [
         "Extension Packs"
     ],
