--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "dev-extension-pack",
     "displayName": "Vase.ai Dev Extension Pack",
     "description": "Extension pack for Vase.ai developers",
-    "version": "1.0.2",
+    "version": "1.1.0",
     "publisher": "vase",
     "engines": {
         "vscode": "^1.16.0"
@@ -30,6 +30,9 @@
         "octref.vetur",
         "wix.vscode-import-cost",
         "formulahendry.auto-rename-tag",
-        "formulahendry.auto-close-tag"
+        "formulahendry.auto-close-tag",
+        "Zignd.html-css-class-completion",
+        "steoates.autoimport",
+        "wayou.vscode-todo-highlight"
     ]
 }
