--- a/package.json
+++ b/package.json
@@ -1,38 +1,37 @@
 {
-    "name": "dev-extension-pack",
-    "displayName": "Vase.ai Dev Extension Pack",
-    "description": "Extension pack for Vase.ai developers",
-    "version": "1.2.1",
-    "publisher": "vase",
-    "engines": {
-        "vscode": "^1.16.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/vasetech/dev-extension-pack.git"
-    },
-    "categories": [
-        "Extension Packs"
-    ],
-    "icon": "images/icon.png",
-    "galleryBanner": {
-        "color": "#4BAD00",
-        "theme": "dark"
-    },
-    "extensionDependencies": [ 
-        "christian-kohler.npm-intellisense", 
-        "christian-kohler.path-intellisense",
-        "esbenp.prettier-vscode",
-        "formulahendry.docker-explorer",
-        "PeterJausovec.vscode-docker",
-        "eamodio.gitlens",
-        "octref.vscode-json-transform",
-        "octref.vetur",
-        "wix.vscode-import-cost",
-        "formulahendry.auto-rename-tag",
-        "formulahendry.auto-close-tag",
-        "Zignd.html-css-class-completion",
-        "steoates.autoimport",
-        "wayou.vscode-todo-highlight"
-    ]
+  "name": "dev-extension-pack",
+  "displayName": "Vase.ai Dev Extension Pack",
+  "description": "Extension pack for Vase.ai developers",
+  "version": "1.3.0",
+  "publisher": "vase",
+  "engines": {
+    "vscode": "^1.16.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vasetech/dev-extension-pack.git"
+  },
+  "categories": ["Extension Packs"],
+  "icon": "images/icon.png",
+  "galleryBanner": {
+    "color": "#4BAD00",
+    "theme": "dark"
+  },
+  "extensionDependencies": [
+    "christian-kohler.npm-intellisense",
+    "christian-kohler.path-intellisense",
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint",
+    "formulahendry.docker-explorer",
+    "PeterJausovec.vscode-docker",
+    "eamodio.gitlens",
+    "octref.vscode-json-transform",
+    "octref.vetur",
+    "wix.vscode-import-cost",
+    "formulahendry.auto-rename-tag",
+    "formulahendry.auto-close-tag",
+    "Zignd.html-css-class-completion",
+    "steoates.autoimport",
+    "wayou.vscode-todo-highlight"
+  ]
 }
