--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dev-extension-pack",
   "displayName": "Vase.ai Dev Extension Pack",
   "description": "Extension pack for Vase.ai developers",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "publisher": "vase",
   "engines": {
     "vscode": "^1.16.0"
@@ -22,8 +22,7 @@
     "christian-kohler.path-intellisense",
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "formulahendry.docker-explorer",
-    "PeterJausovec.vscode-docker",
+    "peterjausovec.vscode-docker",
     "eamodio.gitlens",
     "octref.vscode-json-transform",
     "octref.vetur",
